@@ -799,11 +799,11 @@ void help()
   synopsis(stdout);
   fputs("\n"
 "-a\tproduce approximate description of output\n"
-"-b\tprint backtraces with errors or warnings\n"
-"-c\tdisable color output\n"
-"-C\tenable compatibility mode\n"
-"-d CS\tdefine one-character string name C as string S\n"
-"-d NAME=STRING\n\tdefine string NAME as STRING\n"
+"-b\treport backtraces with errors or warnings\n"
+"-c\tstart with color output disabled\n"
+"-C\tstart with AT&T troff compatibility mode enabled\n"
+"-d ST\tstore text T to string S (one character)\n"
+"-d STRING=TEXT\n\tstore TEXT to string STRING\n"
 "-D ENC\tfall back to ENC as default input encoding; implies -k\n"
 "-e\tpreprocess with eqn\n"
 "-E\tsuppress error diagnostics; implies -Ww\n"
@@ -818,8 +818,8 @@ void help()
 // "-J\tpreprocess with gideal\n"
 "-k\tpreprocess with preconv\n"
 "-K ENC\tuse ENC as input encoding; implies -k\n"
-"-l\tspool the output\n"
-"-L ARG\tpass ARG to the print spooler\n"
+"-l\tsend postprocessed output to print spooler\n"
+"-L ARG\tpass ARG to print spooler\n"
 "-m NAME\tread macro file NAME.tmac\n"
 "-M DIR\tsearch DIR for macro files\n"
 "-N\tdon't allow newlines within eqn delimiters\n"
@@ -827,21 +827,21 @@ void help()
 "-o LIST\toutput only page in LIST (\"1\"; \"2,4\"; \"3,7-11\")\n"
 "-p\tpreprocess with pic\n"
 "-P ARG\tpass ARG to the postprocessor\n"
-"-r CN\tdefine one-character register name C as numeric expression N\n"
-"-r REG=EXPR\n\tdefine register REG as numeric expression EXPR\n"
+"-r CN\tstore numeric expression N in register C (one character)\n"
+"-r REG=EXPR\n\tstore numeric expression EXPR in register REG\n"
 "-R\tpreprocess with refer\n"
 "-s\tpreprocess with soelim\n"
-"-S\tenable safer mode (the default)\n"
+"-S\tenable safer mode (default)\n"
 "-t\tpreprocess with tbl\n"
 "-T DEV\tprepare output for device DEV\n"
-"-U\tenable unsafe mode\n"
+"-U\taccept unsafe input (disable safer mode)\n"
 "-v\toutput version information and pass -v to commands to be run\n"
 "-V\twrite commands to standard output instead of running them\n"
 "-w NAME\tenable warning type NAME\n"
 "-W NAME\tinhibit warning type NAME\n"
 "-X\trun gxditview previewer instead of normal postprocessor\n"
 "-z\tsuppress formatted output\n"
-"-Z\tdon't postprocess\n"
+"-Z\tdo not run postprocessor\n"
 "\n"
 "See groff(1) for details.\n",
 	stdout);
