@@ -1,3 +1,8 @@
+2022-06-16  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* src/roff/groff/groff.cpp (help): Revise usage message for
+	expressiveness and clarity.
+
 2022-06-10  Deri James  <deri@chuzzlewit.myzen.co.uk>
 
 	[gropdf]: Correct display of pathnames used.
@@ -16,7 +21,8 @@
 
 2022-06-19  Ingo Schwarze <schwarze@openbsd.org>
 
-	* font/devpdf/devpdf.am: Always build PDF font description files.
+	* font/devpdf/devpdf.am: Always build PDF font description
+	files.
 
 	Build font/devpdf/download and the various TR, TB, CR etc.
 	files in the same directory even when they are not required
